# practice

./: .gitignore  README.md
backend/forum/: README.md
backend/forum/frontend/: app.js  ask.html  styles.css
c++/: .clang-format  CMakeLists.txt  build.sh
c++/adt/lock_free_queue/: lock_free_queue.h
c++/interview/order_system/: order_system.h  order_system_test.cpp
c++/interview/order_system/doc/: README.md
c++/ipc/: channel_test.cpp  message.h
c++/lock_free_queue/: lock_free_queue.h  lock_free_queue_test.cpp
c++/practice/adt/lock_free_queue/: lock_free_queue_test.cpp
c++/practice/adt/lru/: lru.h
c++/practice/ipc/: channel.h  shm_channel.h
c++/practice/oop/: virtual_table_test.cpp
c++/practice/stl/: vector.h  vector_test.cpp
c++/stl/: vector.h  vector_test.cpp
c++/timer/: timer_with_epoll.cpp  timer_with_epoll.h  timer_with_epoll_test.cpp
c++/util/: unique_fd.h
forum/: README.md  Readme.md
forum/backend/: 未命名绘图.drawio
forum/backend/forum_server/: .gitignore  Cargo.toml  log4rs.yml
forum/docs/: api.md
forum/docs/design/: non_sql_database.md
forum/frontend/: index.html
go/: go.mod  go.work
go/grafana-demo/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  main.go
go/grpc-demo/: go.mod  main.go
go/kafka-demo/: .gitignore  Makefile  QUICKSTART.md  README.md  docker-compose.yml  go.mod  go.sum  project-structure.md  project-structure.txt
go/minitest/: go.mod  main.go
go/nats-demo/: go.mod
go/nats_test/: go.mod
go/temp/: go.mod  main.go
python/: download_video.py
rust/minitest/: Cargo.toml
(+52 files in other folders)
